
################################################################################
##                                                                            ##
##  This file is part of NCrystal (see https://mctools.github.io/ncrystal/)   ##
##                                                                            ##
##  Copyright 2015-2025 NCrystal developers                                   ##
##                                                                            ##
##  Licensed under the Apache License, Version 2.0 (the "License");           ##
##  you may not use this file except in compliance with the License.          ##
##  You may obtain a copy of the License at                                   ##
##                                                                            ##
##      http://www.apache.org/licenses/LICENSE-2.0                            ##
##                                                                            ##
##  Unless required by applicable law or agreed to in writing, software       ##
##  distributed under the License is distributed on an "AS IS" BASIS,         ##
##  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  ##
##  See the License for the specific language governing permissions and       ##
##  limitations under the License.                                            ##
##                                                                            ##
################################################################################

[project]
name = "ncrystal-verify"
version = "4.1.8"
requires-python = ">=3.8"
#Not ncrystal-core, since we want to allow testing of manually built
#installations, where ncrystal-core might be installed in a non pip-aware
#manner:
dependencies = [ 'ncrystal-python==4.1.8' ]
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  { name="NCrystal developers (Thomas Kittelmann, Xiao Xiao Cai)" },
]
description = "Library for thermal neutron transport in crystals and other materials."
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
"Homepage" = "https://mctools.github.io/ncrystal/"
"Bug Tracker" = "https://github.com/mctools/ncrystal/issues"

[project.scripts]
ncrystal-verify = "_ncrystal_verify._cli:main"

[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
logging.level = "INFO"
minimum-version = "build-system.requires"
wheel.packages = ['skbld_autogen/_ncrystal_verify']
sdist.include = ['/CMakeLists.txt','/pyproject.toml','/skbld_autogen/']
sdist.cmake = true
wheel.py-api = "py3" # as close to "noarch" as possible (ABI3)
wheel.platlib = false # Wheels are pure, CMake is only used to invoke generate.py

[project.optional-dependencies]
all = ['ase<3.24.0', 'gemmi>=0.6.1', 'matplotlib>=3.6.0',
       'mpmath>=1.3.0', 'numpy>=1.22', 'spglib>=2.1.0']
