
################################################################################
##                                                                            ##
##  This file is part of NCrystal (see https://mctools.github.io/ncrystal/)   ##
##                                                                            ##
##  Copyright 2015-2026 NCrystal developers                                   ##
##                                                                            ##
##  Licensed under the Apache License, Version 2.0 (the "License");           ##
##  you may not use this file except in compliance with the License.          ##
##  You may obtain a copy of the License at                                   ##
##                                                                            ##
##      http://www.apache.org/licenses/LICENSE-2.0                            ##
##                                                                            ##
##  Unless required by applicable law or agreed to in writing, software       ##
##  distributed under the License is distributed on an "AS IS" BASIS,         ##
##  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  ##
##  See the License for the specific language governing permissions and       ##
##  limitations under the License.                                            ##
##                                                                            ##
################################################################################

[project]
name = "ncrystal-plugin-DummyPlugin"
version = "0.0.1"
license = {file = "LICENSE"}
dependencies = [ "ncrystal-core>=4.0.0", "ncrystal-pypluginmgr>=0.0.5" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[build-system]
requires = ["scikit-build-core>=0.10", "ncrystal-core>=4.0.0" ]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
#cmake.verbose = true
logging.level = "INFO"
minimum-version = "build-system.requires"
wheel.packages = []#handled by cmake
wheel.py-api = "py3"
