[project]
name = "ncrystal-plugin-DummyDataPlugin"
version = "0.0.1"
dependencies = [ "ncrystal-pypluginmgr>=0.0.5" ]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"*" = ["*.ncmat"]
